--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <span >4</span>
      <span >5</span>
     </div>
-    <button  onclick="rate()" type="submit">Submit</button>
+    <button id="btnconttaval" onclick="rate()" type="submit">Submit</button>
   </div>
   
   <!-- Rating state end -->
